// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterCount when is classic theme should apply classic styling 1`] = `
.c0 {
  text-align: right;
  margin-top: 4px;
  margin-bottom: 4px;
}

.c0 span {
  font-weight: 700;
}

<WithTheme(CharacterCount)
  isOverLimit={false}
  limit="10"
  theme={
    Object {
      "colors": Object {
        "base": "#00A376",
        "border": "#668491",
        "brand": "#00DC00",
        "error": "#C7384F",
        "focus": "#FFDA7F",
        "greyDarkBlue50": "#8099a4",
        "info": "#0073C2",
        "primary": "#00805D",
        "secondary": "#006045",
        "success": "#00B000",
        "tertiary": "#003F2E",
        "warning": "#FFB500",
        "white": "#FFFFFF",
      },
      "disabled": Object {
        "border": "#4d7080",
        "disabled": "#b3c2c8",
        "input": "#1e499f",
        "text": "#003349",
      },
      "name": "classic",
      "shadows": Object {
        "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
        "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
        "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
        "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
        "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
      },
      "text": Object {
        "color": "rgba(0,0,0,0.9)",
        "placeholder": "rgba(0,0,0,0.3)",
        "size": "14px",
      },
    }
  }
  value="5"
>
  <CharacterCount
    isOverLimit={false}
    limit="10"
    theme={
      Object {
        "colors": Object {
          "base": "#00A376",
          "border": "#668491",
          "brand": "#00DC00",
          "error": "#C7384F",
          "focus": "#FFDA7F",
          "greyDarkBlue50": "#8099a4",
          "info": "#0073C2",
          "primary": "#00805D",
          "secondary": "#006045",
          "success": "#00B000",
          "tertiary": "#003F2E",
          "warning": "#FFB500",
          "white": "#FFFFFF",
        },
        "disabled": Object {
          "border": "#4d7080",
          "disabled": "#b3c2c8",
          "input": "#1e499f",
          "text": "#003349",
        },
        "name": "classic",
        "shadows": Object {
          "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
          "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
          "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
          "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
          "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
        },
        "text": Object {
          "color": "rgba(0,0,0,0.9)",
          "placeholder": "rgba(0,0,0,0.3)",
          "size": "14px",
        },
      }
    }
    value="5"
  >
    <ClassicCharacterCount
      isOverLimit={false}
      limit="10"
      theme={
        Object {
          "colors": Object {
            "base": "#00A376",
            "border": "#668491",
            "brand": "#00DC00",
            "error": "#C7384F",
            "focus": "#FFDA7F",
            "greyDarkBlue50": "#8099a4",
            "info": "#0073C2",
            "primary": "#00805D",
            "secondary": "#006045",
            "success": "#00B000",
            "tertiary": "#003F2E",
            "warning": "#FFB500",
            "white": "#FFFFFF",
          },
          "disabled": Object {
            "border": "#4d7080",
            "disabled": "#b3c2c8",
            "input": "#1e499f",
            "text": "#003349",
          },
          "name": "classic",
          "shadows": Object {
            "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
            "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
            "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
            "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
            "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
          },
          "text": Object {
            "color": "rgba(0,0,0,0.9)",
            "placeholder": "rgba(0,0,0,0.3)",
            "size": "14px",
          },
        }
      }
      value="5"
    >
      <styled.div
        isOverLimit={false}
        theme={
          Object {
            "colors": Object {
              "base": "#00A376",
              "border": "#668491",
              "brand": "#00DC00",
              "error": "#C7384F",
              "focus": "#FFDA7F",
              "greyDarkBlue50": "#8099a4",
              "info": "#0073C2",
              "primary": "#00805D",
              "secondary": "#006045",
              "success": "#00B000",
              "tertiary": "#003F2E",
              "warning": "#FFB500",
              "white": "#FFFFFF",
            },
            "disabled": Object {
              "border": "#4d7080",
              "disabled": "#b3c2c8",
              "input": "#1e499f",
              "text": "#003349",
            },
            "name": "classic",
            "shadows": Object {
              "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
              "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
              "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
              "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
              "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
            },
            "text": Object {
              "color": "rgba(0,0,0,0.9)",
              "placeholder": "rgba(0,0,0,0.3)",
              "size": "14px",
            },
          }
        }
      >
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bwzfXH",
                "isStatic": false,
                "lastClassName": "c0",
                "rules": Array [
                  "
  text-align: right;
  margin-top: 4px;
  margin-bottom: 4px;

  span {
    font-weight: 700;
  }

  ",
                  [Function],
                  "

",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bwzfXH",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          isOverLimit={false}
          theme={
            Object {
              "colors": Object {
                "base": "#00A376",
                "border": "#668491",
                "brand": "#00DC00",
                "error": "#C7384F",
                "focus": "#FFDA7F",
                "greyDarkBlue50": "#8099a4",
                "info": "#0073C2",
                "primary": "#00805D",
                "secondary": "#006045",
                "success": "#00B000",
                "tertiary": "#003F2E",
                "warning": "#FFB500",
                "white": "#FFFFFF",
              },
              "disabled": Object {
                "border": "#4d7080",
                "disabled": "#b3c2c8",
                "input": "#1e499f",
                "text": "#003349",
              },
              "name": "classic",
              "shadows": Object {
                "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
                "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
                "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
                "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
                "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
              },
              "text": Object {
                "color": "rgba(0,0,0,0.9)",
                "placeholder": "rgba(0,0,0,0.3)",
                "size": "14px",
              },
            }
          }
        >
          <div
            className="c0"
          >
            You have used 
            <span>
              5
            </span>
             of 
            <span>
              10
            </span>
             characters
          </div>
        </StyledComponent>
      </styled.div>
    </ClassicCharacterCount>
  </CharacterCount>
</WithTheme(CharacterCount)>
`;

exports[`CharacterCount when is classic theme when isOverLimit prop is true should be styled for warn over limit 1`] = `
.c0 {
  text-align: right;
  margin-top: 4px;
  margin-bottom: 4px;
  color: #C7384F;
}

.c0 span {
  font-weight: 700;
}

<WithTheme(CharacterCount)
  isOverLimit={true}
  limit="10"
  theme={
    Object {
      "colors": Object {
        "base": "#00A376",
        "border": "#668491",
        "brand": "#00DC00",
        "error": "#C7384F",
        "focus": "#FFDA7F",
        "greyDarkBlue50": "#8099a4",
        "info": "#0073C2",
        "primary": "#00805D",
        "secondary": "#006045",
        "success": "#00B000",
        "tertiary": "#003F2E",
        "warning": "#FFB500",
        "white": "#FFFFFF",
      },
      "disabled": Object {
        "border": "#4d7080",
        "disabled": "#b3c2c8",
        "input": "#1e499f",
        "text": "#003349",
      },
      "name": "classic",
      "shadows": Object {
        "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
        "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
        "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
        "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
        "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
      },
      "text": Object {
        "color": "rgba(0,0,0,0.9)",
        "placeholder": "rgba(0,0,0,0.3)",
        "size": "14px",
      },
    }
  }
  value="5"
>
  <CharacterCount
    isOverLimit={true}
    limit="10"
    theme={
      Object {
        "colors": Object {
          "base": "#00A376",
          "border": "#668491",
          "brand": "#00DC00",
          "error": "#C7384F",
          "focus": "#FFDA7F",
          "greyDarkBlue50": "#8099a4",
          "info": "#0073C2",
          "primary": "#00805D",
          "secondary": "#006045",
          "success": "#00B000",
          "tertiary": "#003F2E",
          "warning": "#FFB500",
          "white": "#FFFFFF",
        },
        "disabled": Object {
          "border": "#4d7080",
          "disabled": "#b3c2c8",
          "input": "#1e499f",
          "text": "#003349",
        },
        "name": "classic",
        "shadows": Object {
          "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
          "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
          "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
          "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
          "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
        },
        "text": Object {
          "color": "rgba(0,0,0,0.9)",
          "placeholder": "rgba(0,0,0,0.3)",
          "size": "14px",
        },
      }
    }
    value="5"
  >
    <ClassicCharacterCount
      isOverLimit={true}
      limit="10"
      theme={
        Object {
          "colors": Object {
            "base": "#00A376",
            "border": "#668491",
            "brand": "#00DC00",
            "error": "#C7384F",
            "focus": "#FFDA7F",
            "greyDarkBlue50": "#8099a4",
            "info": "#0073C2",
            "primary": "#00805D",
            "secondary": "#006045",
            "success": "#00B000",
            "tertiary": "#003F2E",
            "warning": "#FFB500",
            "white": "#FFFFFF",
          },
          "disabled": Object {
            "border": "#4d7080",
            "disabled": "#b3c2c8",
            "input": "#1e499f",
            "text": "#003349",
          },
          "name": "classic",
          "shadows": Object {
            "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
            "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
            "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
            "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
            "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
          },
          "text": Object {
            "color": "rgba(0,0,0,0.9)",
            "placeholder": "rgba(0,0,0,0.3)",
            "size": "14px",
          },
        }
      }
      value="5"
    >
      <styled.div
        isOverLimit={true}
        theme={
          Object {
            "colors": Object {
              "base": "#00A376",
              "border": "#668491",
              "brand": "#00DC00",
              "error": "#C7384F",
              "focus": "#FFDA7F",
              "greyDarkBlue50": "#8099a4",
              "info": "#0073C2",
              "primary": "#00805D",
              "secondary": "#006045",
              "success": "#00B000",
              "tertiary": "#003F2E",
              "warning": "#FFB500",
              "white": "#FFFFFF",
            },
            "disabled": Object {
              "border": "#4d7080",
              "disabled": "#b3c2c8",
              "input": "#1e499f",
              "text": "#003349",
            },
            "name": "classic",
            "shadows": Object {
              "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
              "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
              "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
              "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
              "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
            },
            "text": Object {
              "color": "rgba(0,0,0,0.9)",
              "placeholder": "rgba(0,0,0,0.3)",
              "size": "14px",
            },
          }
        }
      >
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bwzfXH",
                "isStatic": false,
                "lastClassName": "c0",
                "rules": Array [
                  "
  text-align: right;
  margin-top: 4px;
  margin-bottom: 4px;

  span {
    font-weight: 700;
  }

  ",
                  [Function],
                  "

",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bwzfXH",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          isOverLimit={true}
          theme={
            Object {
              "colors": Object {
                "base": "#00A376",
                "border": "#668491",
                "brand": "#00DC00",
                "error": "#C7384F",
                "focus": "#FFDA7F",
                "greyDarkBlue50": "#8099a4",
                "info": "#0073C2",
                "primary": "#00805D",
                "secondary": "#006045",
                "success": "#00B000",
                "tertiary": "#003F2E",
                "warning": "#FFB500",
                "white": "#FFFFFF",
              },
              "disabled": Object {
                "border": "#4d7080",
                "disabled": "#b3c2c8",
                "input": "#1e499f",
                "text": "#003349",
              },
              "name": "classic",
              "shadows": Object {
                "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
                "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
                "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
                "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
                "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
              },
              "text": Object {
                "color": "rgba(0,0,0,0.9)",
                "placeholder": "rgba(0,0,0,0.3)",
                "size": "14px",
              },
            }
          }
        >
          <div
            className="c0"
          >
            You have used 
            <span>
              5
            </span>
             of 
            <span>
              10
            </span>
             characters
          </div>
        </StyledComponent>
      </styled.div>
    </ClassicCharacterCount>
  </CharacterCount>
</WithTheme(CharacterCount)>
`;

exports[`CharacterCount when isOverLimit prop is true should be styled for warn over limit 1`] = `
.c0 {
  text-align: right;
  font-size: 12px;
  margin-top: 4px;
  margin-bottom: 4px;
  color: #C7384F;
  font-weight: 700;
}

<WithTheme(CharacterCount)
  isOverLimit={true}
  limit="10"
  value="5"
>
  <CharacterCount
    isOverLimit={true}
    limit="10"
    theme={
      Object {
        "colors": Object {
          "border": "#668491",
          "brand": "#00DC00",
          "error": "#C7384F",
          "focus": "#FFDA7F",
          "info": "#0073C2",
          "primary": "#26A826",
          "secondary": "#006300",
          "success": "#00B000",
          "tertiary": "#004400",
          "warning": "#FFB500",
          "white": "#FFFFFF",
        },
        "disabled": Object {
          "border": "#CCD6DA",
          "disabled": "rgba(0,0,0,0.55)",
          "input": "#F2F4F5",
          "text": "rgba(0,0,0,0.3)",
        },
        "name": "base",
        "shadows": Object {
          "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
          "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
          "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
          "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
          "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
        },
        "text": Object {
          "color": "rgba(0,0,0,0.9)",
          "placeholder": "rgba(0,0,0,0.3)",
          "size": "14px",
        },
      }
    }
    value="5"
  >
    <styled.div
      isOverLimit={true}
      theme={
        Object {
          "colors": Object {
            "border": "#668491",
            "brand": "#00DC00",
            "error": "#C7384F",
            "focus": "#FFDA7F",
            "info": "#0073C2",
            "primary": "#26A826",
            "secondary": "#006300",
            "success": "#00B000",
            "tertiary": "#004400",
            "warning": "#FFB500",
            "white": "#FFFFFF",
          },
          "disabled": Object {
            "border": "#CCD6DA",
            "disabled": "rgba(0,0,0,0.55)",
            "input": "#F2F4F5",
            "text": "rgba(0,0,0,0.3)",
          },
          "name": "base",
          "shadows": Object {
            "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
            "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
            "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
            "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
            "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
          },
          "text": Object {
            "color": "rgba(0,0,0,0.9)",
            "placeholder": "rgba(0,0,0,0.3)",
            "size": "14px",
          },
        }
      }
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  text-align: right;
  font-size: 12px;
  margin-top: 4px;
  margin-bottom: 4px;
  color: ",
                [Function],
                ";

  ",
                [Function],
                "

",
              ],
            },
            "defaultProps": Object {
              "theme": Object {
                "colors": Object {
                  "border": "#668491",
                  "brand": "#00DC00",
                  "error": "#C7384F",
                  "focus": "#FFDA7F",
                  "info": "#0073C2",
                  "primary": "#26A826",
                  "secondary": "#006300",
                  "success": "#00B000",
                  "tertiary": "#004400",
                  "warning": "#FFB500",
                  "white": "#FFFFFF",
                },
                "disabled": Object {
                  "border": "#CCD6DA",
                  "disabled": "rgba(0,0,0,0.55)",
                  "input": "#F2F4F5",
                  "text": "rgba(0,0,0,0.3)",
                },
                "name": "base",
                "shadows": Object {
                  "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
                  "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
                  "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
                  "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
                  "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
                },
                "text": Object {
                  "color": "rgba(0,0,0,0.9)",
                  "placeholder": "rgba(0,0,0,0.3)",
                  "size": "14px",
                },
              },
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        isOverLimit={true}
        theme={
          Object {
            "colors": Object {
              "border": "#668491",
              "brand": "#00DC00",
              "error": "#C7384F",
              "focus": "#FFDA7F",
              "info": "#0073C2",
              "primary": "#26A826",
              "secondary": "#006300",
              "success": "#00B000",
              "tertiary": "#004400",
              "warning": "#FFB500",
              "white": "#FFFFFF",
            },
            "disabled": Object {
              "border": "#CCD6DA",
              "disabled": "rgba(0,0,0,0.55)",
              "input": "#F2F4F5",
              "text": "rgba(0,0,0,0.3)",
            },
            "name": "base",
            "shadows": Object {
              "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
              "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
              "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
              "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
              "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
            },
            "text": Object {
              "color": "rgba(0,0,0,0.9)",
              "placeholder": "rgba(0,0,0,0.3)",
              "size": "14px",
            },
          }
        }
      >
        <div
          className="c0"
        >
          5
          /
          10
        </div>
      </StyledComponent>
    </styled.div>
  </CharacterCount>
</WithTheme(CharacterCount)>
`;

exports[`CharacterCount when rendered should render default 1`] = `
.c0 {
  text-align: right;
  font-size: 12px;
  margin-top: 4px;
  margin-bottom: 4px;
  color: rgba(0,0,0,0.55);
}

<WithTheme(CharacterCount)
  isOverLimit={false}
  limit="10"
  value="5"
>
  <CharacterCount
    isOverLimit={false}
    limit="10"
    theme={
      Object {
        "colors": Object {
          "border": "#668491",
          "brand": "#00DC00",
          "error": "#C7384F",
          "focus": "#FFDA7F",
          "info": "#0073C2",
          "primary": "#26A826",
          "secondary": "#006300",
          "success": "#00B000",
          "tertiary": "#004400",
          "warning": "#FFB500",
          "white": "#FFFFFF",
        },
        "disabled": Object {
          "border": "#CCD6DA",
          "disabled": "rgba(0,0,0,0.55)",
          "input": "#F2F4F5",
          "text": "rgba(0,0,0,0.3)",
        },
        "name": "base",
        "shadows": Object {
          "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
          "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
          "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
          "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
          "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
        },
        "text": Object {
          "color": "rgba(0,0,0,0.9)",
          "placeholder": "rgba(0,0,0,0.3)",
          "size": "14px",
        },
      }
    }
    value="5"
  >
    <styled.div
      isOverLimit={false}
      theme={
        Object {
          "colors": Object {
            "border": "#668491",
            "brand": "#00DC00",
            "error": "#C7384F",
            "focus": "#FFDA7F",
            "info": "#0073C2",
            "primary": "#26A826",
            "secondary": "#006300",
            "success": "#00B000",
            "tertiary": "#004400",
            "warning": "#FFB500",
            "white": "#FFFFFF",
          },
          "disabled": Object {
            "border": "#CCD6DA",
            "disabled": "rgba(0,0,0,0.55)",
            "input": "#F2F4F5",
            "text": "rgba(0,0,0,0.3)",
          },
          "name": "base",
          "shadows": Object {
            "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
            "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
            "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
            "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
            "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
          },
          "text": Object {
            "color": "rgba(0,0,0,0.9)",
            "placeholder": "rgba(0,0,0,0.3)",
            "size": "14px",
          },
        }
      }
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  text-align: right;
  font-size: 12px;
  margin-top: 4px;
  margin-bottom: 4px;
  color: ",
                [Function],
                ";

  ",
                [Function],
                "

",
              ],
            },
            "defaultProps": Object {
              "theme": Object {
                "colors": Object {
                  "border": "#668491",
                  "brand": "#00DC00",
                  "error": "#C7384F",
                  "focus": "#FFDA7F",
                  "info": "#0073C2",
                  "primary": "#26A826",
                  "secondary": "#006300",
                  "success": "#00B000",
                  "tertiary": "#004400",
                  "warning": "#FFB500",
                  "white": "#FFFFFF",
                },
                "disabled": Object {
                  "border": "#CCD6DA",
                  "disabled": "rgba(0,0,0,0.55)",
                  "input": "#F2F4F5",
                  "text": "rgba(0,0,0,0.3)",
                },
                "name": "base",
                "shadows": Object {
                  "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
                  "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
                  "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
                  "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
                  "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
                },
                "text": Object {
                  "color": "rgba(0,0,0,0.9)",
                  "placeholder": "rgba(0,0,0,0.3)",
                  "size": "14px",
                },
              },
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        isOverLimit={false}
        theme={
          Object {
            "colors": Object {
              "border": "#668491",
              "brand": "#00DC00",
              "error": "#C7384F",
              "focus": "#FFDA7F",
              "info": "#0073C2",
              "primary": "#26A826",
              "secondary": "#006300",
              "success": "#00B000",
              "tertiary": "#004400",
              "warning": "#FFB500",
              "white": "#FFFFFF",
            },
            "disabled": Object {
              "border": "#CCD6DA",
              "disabled": "rgba(0,0,0,0.55)",
              "input": "#F2F4F5",
              "text": "rgba(0,0,0,0.3)",
            },
            "name": "base",
            "shadows": Object {
              "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
              "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
              "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
              "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
              "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
            },
            "text": Object {
              "color": "rgba(0,0,0,0.9)",
              "placeholder": "rgba(0,0,0,0.3)",
              "size": "14px",
            },
          }
        }
      >
        <div
          className="c0"
        >
          5
          /
          10
        </div>
      </StyledComponent>
    </styled.div>
  </CharacterCount>
</WithTheme(CharacterCount)>
`;
